--- a/D3D11Starter-main/imgui.ini
+++ b/D3D11Starter-main/imgui.ini
@@ -3,6 +3,30 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=747,20
-Size=453,352
+Pos=75,48
+Size=389,352
+
+[Window][Dear ImGui Demo/ResizableChild_478B81A3]
+IsChild=1
+Size=402,136
+
+[Window][Dear ImGui Demo/Red_BEEF922B]
+IsChild=1
+Size=200,100
+
+[Window][Example: Custom rendering]
+Pos=62,60
+Size=623,414
+
+[Window][About Dear ImGui]
+Pos=61,60
+Size=570,160
+
+[Window][Hello, ImGui!]
+Pos=557,62
+Size=198,105
+
+[Window][Customized UI window]
+Pos=550,39
+Size=544,231
 
