--- a/D3D11Starter-main/D3D11Starter.vcxproj
+++ b/D3D11Starter-main/D3D11Starter.vcxproj
@@ -251,6 +251,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ShaderIncludeFile.hlsli" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
