--- a/D3D11Starter-main/D3D11Starter.vcxproj.filters
+++ b/D3D11Starter-main/D3D11Starter.vcxproj.filters
@@ -104,9 +104,6 @@
     <ClInclude Include="PathHelpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Vertex.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -153,6 +150,9 @@
       <Filter>Header Files\Structs Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Lights.h">
+      <Filter>Header Files\Structs Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Vertex.h">
       <Filter>Header Files\Structs Header Files</Filter>
     </ClInclude>
   </ItemGroup>
