--- a/D3D11Starter-main/D3D11Starter.vcxproj.filters
+++ b/D3D11Starter-main/D3D11Starter.vcxproj.filters
@@ -178,6 +178,7 @@
     <FxCompile Include="PixelShaderTC.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="SkyVertexShader.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderIncludeFile.hlsli">
