--- a/D3D11Starter-main/D3D11Starter.vcxproj.filters
+++ b/D3D11Starter-main/D3D11Starter.vcxproj.filters
@@ -179,6 +179,7 @@
       <Filter>Shaders</Filter>
     </FxCompile>
     <FxCompile Include="SkyVertexShader.hlsl" />
+    <FxCompile Include="SkyPS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderIncludeFile.hlsli">
