Creating a shadow map.
I am currently creating shadows in the game using a shadow texture.

--- a/D3D11Starter-main/D3D11Starter.vcxproj.filters
+++ b/D3D11Starter-main/D3D11Starter.vcxproj.filters
@@ -186,6 +186,7 @@
     </FxCompile>
     <FxCompile Include="SkyVertexShader.hlsl" />
     <FxCompile Include="SkyPS.hlsl" />
+    <FxCompile Include="ShadowMapVS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderIncludeFile.hlsli">
