Create a Full Screen VS for Post Processing.
I create a triangle vertex position to display post process vertices for pixel shader.

--- a/D3D11Starter-main/D3D11Starter.vcxproj.filters
+++ b/D3D11Starter-main/D3D11Starter.vcxproj.filters
@@ -199,6 +199,9 @@
     <FxCompile Include="ShadowMapVS.hlsl">
       <Filter>Shaders\Vertex Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="FullScreenPPVS.hlsl">
+      <Filter>Shaders\Vertex Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ShaderIncludeFile.hlsli">
